--- a/webstatic/styles/default.css
+++ b/webstatic/styles/default.css
@@ -135,11 +135,13 @@ h5 {
 	margin-bottom: 2px
 }
 blockquote {
-	border-left: 3px solid lightgray;
+	border-left: 4px solid #fbca81;
 	color: #666;
 	line-height: 1.7em;
 	margin: 5px 40px;
-	padding-left: 8px;
+    padding-left: 8px;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
 }
 svg {
 	font-family: Aleo, sans-serif;
@@ -173,7 +175,6 @@ code {
 	border-radius: 3px;
 	box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.075);
 	color: rgba(0, 0, 0, 0.75);
-	display: inline-block;
 	font-family: monospace;
 	font-size: 12px;
 	font-weight: 400;
@@ -184,7 +185,7 @@ pre {
 	background: rgba(0, 0, 0, 0.05);
 	border: none;
 	box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.075);
-	padding: 15px;
+	padding: 0px;
 }
 pre code {
 	background: none;
@@ -196,6 +197,7 @@ a {
 	color: #419eda;
 }
 table {
+    width: 100%;
 	border-spacing: 0;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -205,7 +207,8 @@ table thead th {
 	text-transform: uppercase;
 	font-size: 13px;
 	line-height: 20px;
-	border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-right: 1px solid #ddd;
 	padding-top: 0px;
 	padding-right: 10px;
 	padding-bottom: 0px;
@@ -214,11 +217,12 @@ table thead th {
 }
 table tbody td {
 	line-height: 18px;
-	border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-right: 1px solid #ddd;
 	padding-top: 6px;
 	padding-right: 10px;
 	padding-bottom: 6px;
-	padding-left: 0px;
+	padding-left: 10px;
 	vertical-align: text-top;
 }
 table thead td:first-child,
