--- a/webstatic/styles/default.css
+++ b/webstatic/styles/default.css
@@ -169,17 +169,19 @@ b,
 strong {
 	font-weight: 600;
 }
-pre,
-code {
+pre,code {
 	background: rgba(0, 0, 0, 0.03);
 	border-radius: 3px;
 	box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.075);
-	color: rgba(0, 0, 0, 0.75);
+	color: rgb(165, 55, 55);
 	font-family: monospace;
 	font-size: 12px;
 	font-weight: 400;
 	padding: 0px 4px;
-	width: 100%;
+    width: 100%;
+    overflow: auto;
+    word-wrap:break-word; /* Internet Explorer 5.5+ */ 
+    white-space: pre-wrap; /* Firefox */
 }
 pre {
 	background: rgba(0, 0, 0, 0.05);
