--- a/webstatic/styles/default.css
+++ b/webstatic/styles/default.css
@@ -227,11 +227,19 @@ table tbody td {
 	padding-left: 10px;
 	vertical-align: text-top;
 }
+table thead tr th {
+    background: #e9e9e9;
+    border-top: 1px solid #ddd;
+    line-height: 40px;
+    vertical-align: middle;
+}
+
 table thead td:first-child,
 table thead th:first-child,
 table tbody td:first-child,
 table tfoot td:first-child {
-	padding-left: 10px;
+    padding-left: 10px;
+    border-left: 1px solid #ddd;
 }
 table thead td:last-child,
 thead th:last-child,
