--- a/webstatic/styles/default.css
+++ b/webstatic/styles/default.css
@@ -135,8 +135,8 @@ h5 {
 	margin-bottom: 2px
 }
 blockquote {
-	border-left: 4px solid #fbca81;
-	color: #666;
+    border-left: 4px solid #e67e22;
+	color: #666666;
 	line-height: 1.7em;
 	margin: 5px 40px;
     padding-left: 8px;
