--- a/webstatic/styles/default.css
+++ b/webstatic/styles/default.css
@@ -170,9 +170,8 @@ strong {
 	font-weight: 600;
 }
 pre,code {
-	background: rgba(0, 0, 0, 0.03);
+	background: #F0F0F0;
 	border-radius: 3px;
-	box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.075);
 	color: rgb(165, 55, 55);
 	font-family: monospace;
 	font-size: 12px;
@@ -180,17 +179,23 @@ pre,code {
 	padding: 0px 4px;
     width: 100%;
     overflow: auto;
-    word-wrap:break-word; /* Internet Explorer 5.5+ */ 
-    white-space: pre-wrap; /* Firefox */
+    word-wrap:break-word !important; /* Internet Explorer 5.5+ */ 
+    white-space: pre-wrap !important; /* Firefox */
 }
 pre {
-	background: rgba(0, 0, 0, 0.05);
-	border: none;
-	box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.075);
-	padding: 0px;
+    width: 98%;
+    padding: 5px 5px 10px 10px;
+    margin: 15px 0;
+    display: block;
+    line-height: 18px;
+    background: #F0F0F0;
+    border-radius: 3px;
+    border: 1px solid #ddd;
+    border-left-width: 4px;
+    overflow-x: auto;
 }
 pre code {
-	background: none;
+    background: #F0F0F0;
 	box-shadow: none;
 	padding: 2px 4px;
 	overflow: auto;
