--- a/webstatic/styles/default.css
+++ b/webstatic/styles/default.css
@@ -170,11 +170,12 @@ strong {
 	font-weight: 600;
 }
 pre,code {
+    color: rgb(214, 37, 37);
+    background: #F0F0F0;
 	border-radius: 3px;
 	font-family: monospace;
-	font-size: 12px;
+	font-size: 13px;
 	font-weight: 400;
-    width: 100%;
     word-wrap:break-word !important; /* Internet Explorer 5.5+ */ 
     white-space: pre-wrap !important; /* Firefox */
 }
@@ -194,7 +195,7 @@ pre {
 pre code {
     color: rgb(165, 55, 55);
 	box-shadow: none;
-	padding: 5px 5px 10px 0px;
+	padding: 0px 5px 10px 0px;
 	overflow: auto;
 }
 a {
